prometheus/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: monitoring
spec:
  forwardAuth:
    address: http://traefik-forward-auth.traefik.svc.cluster.local:4181
    authResponseHeaders:
      - X-Forwarded-User
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  tls:
    certResolver: letsencrypt
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.defn.sh`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
    middlewares:
      - name: traefik-forward-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  tls:
    certResolver: letsencrypt
  entryPoints:
    - websecure
  routes:
  - match: Host(`prometheus.defn.sh`)
    kind: Rule
    services:
    - name: prometheus-k8s
      port: 9090
    middlewares:
      - name: traefik-forward-auth
